--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "formik": "^2.1.5",
     "react": "^16.13.1",
+    "react-credit-cards": "^0.8.3",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-icons": "^3.11.0",
